@@ -11,6 +11,7 @@ import com.www.viewpoint.main.dto.GlobalSearchResponse;
 import com.www.viewpoint.main.dto.MemberSimpleDto;
 import com.www.viewpoint.main.dto.MainHomeResponse;
 import com.www.viewpoint.main.repository.MemberSimpleProjection;
+import com.www.viewpoint.share.dto.AssemblyMemberSummaryDto;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -18,6 +19,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class MainHomeService {
@@ -42,8 +44,8 @@ public class MainHomeService {
         return recentBillService.getTop3RecentBills();
     }
 
-    private List<MemberSimpleDto> pickRandomMembersForAge(Integer age) {
-        List<MemberSimpleProjection> members =
+    private List<AssemblyMemberSummaryDto> pickRandomMembersForAge(Integer age) {
+        List<AssemblyMemberQueryProjection> members =
                 (age != null && age > 0)
                         ? assemblyMemberRepository.findRandomByAgeLimit8WithDistrict(age)
                         : assemblyMemberRepository.findRandomLimit8WithDistrict();
@@ -53,20 +55,23 @@ public class MainHomeService {
         }
 
         return members.stream()
-                .map(m -> MemberSimpleDto.builder()
-                        .naasCode(m.getNaasCode())
+                .map(m -> AssemblyMemberSummaryDto.builder()
+                        .memberId(m.getMemberId())
+                        .party(m.getParty())
+                        .duty(m.getDuty())
                         .name(m.getName())
+                        .age(m.getAge())
                         .profileImage(m.getProfileImage())
                         .district(m.getDistrict())   // 여기서 district 세팅
                         .build())
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public MainHomeResponse getMainHomeData() {
         List<Bill> recentBills = pickRecentBillsTop3();
         Integer targetAge = recentBills.isEmpty() ? null : recentBills.get(0).getAge();
 
-        List<MemberSimpleDto> members = pickRandomMembersForAge(targetAge);
+        List<AssemblyMemberSummaryDto> members = pickRandomMembersForAge(targetAge);
 
         return MainHomeResponse.builder()
                 .recentBills(recentBills)
